[gd_scene format=3 uid="uid://cb2l5s72xhjsl"]

[ext_resource type="Script" uid="uid://dovq58gos06tx" path="res://scripts/levels/day2_night.gd" id="1_5lcpw"]
[ext_resource type="Texture2D" uid="uid://dq15xbj1rcyoc" path="res://asset/Character/Kemeja/Ekspresi Serra_20260131033856.png" id="2_g7tpw"]
[ext_resource type="Texture2D" uid="uid://bwg030fatxiip" path="res://assets/levels/background/bg_night.png" id="2_p8rfx"]
[ext_resource type="Texture2D" uid="uid://e4ssvecq0n7f" path="res://assets/levels/environment/dus_2.tres" id="6_4q7kl"]
[ext_resource type="PackedScene" uid="uid://ox3vvjt0cv1u" path="res://scenes/task/task_modular.tscn" id="6_qnu3d"]
[ext_resource type="Texture2D" uid="uid://bw4mca7k5va8q" path="res://assets/levels/environment/kertas_acak_1.tres" id="7_qdi2s"]
[ext_resource type="Texture2D" uid="uid://4pqxuhd5476d" path="res://assets/levels/environment/kertas_acak_2.tres" id="8_4nefn"]
[ext_resource type="PackedScene" uid="uid://cdx24aoy1dsci" path="res://scenes/characters/Player.tscn" id="9_6g21m"]
[ext_resource type="PackedScene" uid="uid://jcn83penk3wp" path="res://scenes/levels/prototype/level_manager.tscn" id="10_rjlel"]
[ext_resource type="Script" uid="uid://blcy0uavri75u" path="res://scripts/levels/wardrobe.gd" id="10_t0udw"]
[ext_resource type="PackedScene" uid="uid://cn3pjhi6lx4c1" path="res://scenes/characters/dialogue_control.tscn" id="11_76ajm"]
[ext_resource type="Texture2D" uid="uid://b8olywfyfsjom" path="res://asset/Character/Piyama/Ekspresi Serra_20260131033905.png" id="11_g7tpw"]
[ext_resource type="PackedScene" uid="uid://c5yqm8x7n8jgr" path="res://scenes/ui/interaction_hint.tscn" id="12_ex7ua"]
[ext_resource type="Script" uid="uid://drdqyqjlb4fp1" path="res://scripts/levels/bed.gd" id="13_qnu3d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0udw"]
size = Vector2(39, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7tpw"]
size = Vector2(42.000004, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex7ua"]
size = Vector2(240, 63.21039)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnu3d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdi2s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nefn"]
size = Vector2(28, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_6g21m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(42.000004, 61)

[node name="Day2Night" type="Node2D" unique_id=837071044]
script = ExtResource("1_5lcpw")
player_sprite_start = ExtResource("2_g7tpw")

[node name="CanvasModulate" type="CanvasModulate" parent="." unique_id=1792659873]
color = Color(0.5330367, 0.5330367, 0.5330367, 1)

[node name="ColorRect" type="ColorRect" parent="." unique_id=2035406380]
offset_left = -367.0
offset_top = -169.0
offset_right = 391.0
offset_bottom = 208.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="NoInterior" type="Sprite2D" parent="." unique_id=887870224]
texture = ExtResource("2_p8rfx")

[node name="TaskModular" parent="." unique_id=126960746 instance=ExtResource("6_qnu3d")]
position = Vector2(-32, 34)
scale = Vector2(0.601753, 0.45733225)
custom_texture = ExtResource("7_qdi2s")

[node name="TaskModular4" parent="." unique_id=1459585901 instance=ExtResource("6_qnu3d")]
position = Vector2(-4, -9.999999)
scale = Vector2(0.601753, 0.45733225)
custom_texture = ExtResource("8_4nefn")

[node name="TaskModular5" parent="." unique_id=1642813679 instance=ExtResource("6_qnu3d")]
position = Vector2(55, 14)
scale = Vector2(0.481753, 0.36613223)
custom_texture = ExtResource("8_4nefn")

[node name="TaskModular6" parent="." unique_id=262779690 instance=ExtResource("6_qnu3d")]
position = Vector2(73, 34.999996)
scale = Vector2(0.68175447, 0.60933334)
collision_mask = 4
custom_texture = ExtResource("6_4q7kl")

[node name="Player" parent="." unique_id=2026500027 instance=ExtResource("9_6g21m")]
position = Vector2(-75, -8)
scale = Vector2(0.6, 0.6)

[node name="LevelManager" parent="." unique_id=167112185 instance=ExtResource("10_rjlel")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=380967375]

[node name="DialogueControl" parent="CanvasLayer" unique_id=1915989084 instance=ExtResource("11_76ajm")]

[node name="DoorTrigger" type="Area2D" parent="." unique_id=297088880]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorTrigger" unique_id=1067217491]
position = Vector2(25.5, 70)
shape = SubResource("RectangleShape2D_t0udw")

[node name="Marker2D" type="Marker2D" parent="." unique_id=1527963578]
position = Vector2(25, 68)
scale = Vector2(1, 1.3336526)

[node name="Kasur" type="StaticBody2D" parent="." unique_id=1289697158]
position = Vector2(-84.99999, -21)
scale = Vector2(0.65, 0.8668741)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kasur" unique_id=863772481]
position = Vector2(15.384632, 20.000004)
scale = Vector2(1.1846154, 1)
shape = SubResource("RectangleShape2D_g7tpw")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=1688505565]
position = Vector2(0, -1)
collision_layer = 8

[node name="WallTop" type="CollisionShape2D" parent="StaticBody2D" unique_id=156551817]
position = Vector2(0, -56)
scale = Vector2(1, 0.56)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="WallBottom" type="CollisionShape2D" parent="StaticBody2D" unique_id=578382157]
position = Vector2(-60.000004, 65.999985)
scale = Vector2(0.548216, 0.51285666)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="WallBottom2" type="CollisionShape2D" parent="StaticBody2D" unique_id=1861872107]
position = Vector2(94, 68)
scale = Vector2(0.42821598, 0.5528542)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="WallBottom3" type="CollisionShape2D" parent="StaticBody2D" unique_id=243513660]
position = Vector2(28.999996, 86)
scale = Vector2(0.548216, 0.15285659)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="Left Wall" type="CollisionShape2D" parent="StaticBody2D" unique_id=513390520]
position = Vector2(-108, -1)
scale = Vector2(0.12599404, 2.9722705)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="Right Wall" type="CollisionShape2D" parent="StaticBody2D" unique_id=1097478302]
position = Vector2(114.00001, -2)
scale = Vector2(0.12599404, 2.9722705)
shape = SubResource("RectangleShape2D_ex7ua")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=1748960833]
position = Vector2(37, -27)
scale = Vector2(1.6361393, 0.12593192)
shape = SubResource("RectangleShape2D_qnu3d")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D" unique_id=379908856]
position = Vector2(77, -34)
scale = Vector2(2.04, 1)
shape = SubResource("RectangleShape2D_qdi2s")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D" unique_id=546746532]
position = Vector2(-75.00001, -10)
scale = Vector2(1.5999987, 3.3600006)
shape = SubResource("RectangleShape2D_qdi2s")

[node name="Wardrobe" type="StaticBody2D" parent="." unique_id=657086733]
position = Vector2(77, -30)
scale = Vector2(1.5508125, 1.5508125)
collision_layer = 2
script = ExtResource("10_t0udw")
change_duration = 1.0
player_sprite_after = ExtResource("11_g7tpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wardrobe" unique_id=2061402547]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_4nefn")

[node name="Timer" type="Timer" parent="Wardrobe" unique_id=1963458021]

[node name="InteractionHint" parent="Wardrobe" unique_id=237101184 instance=ExtResource("12_ex7ua")]
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="Wardrobe" unique_id=1020248336]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wardrobe/Area2D" unique_id=1429921600]
position = Vector2(0, 8.000001)
scale = Vector2(1.6295096, 1.6295096)
shape = SubResource("CircleShape2D_6g21m")

[node name="Bed" type="StaticBody2D" parent="." unique_id=1002830817]
position = Vector2(-76.00001, -9.000002)
scale = Vector2(0.85888374, 0.85888374)
collision_layer = 2
script = ExtResource("13_qnu3d")
furniture_name = "Bed"
complete_task_on_interact = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed" unique_id=1240268959]
position = Vector2(1.5258789e-05, 0.5)
shape = SubResource("RectangleShape2D_rjlel")

[node name="InteractionHint" parent="Bed" unique_id=430802564 instance=ExtResource("12_ex7ua")]
position = Vector2(1.1737531e-05, 10.769235)

[node name="Area2D" type="Area2D" parent="Bed" unique_id=1766615310]
position = Vector2(24.615396, -6.1538434)
scale = Vector2(1.5437342, 1.5437342)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed/Area2D" unique_id=133373760]
position = Vector2(0, 8.000001)
scale = Vector2(1.6295096, 1.6295096)
shape = SubResource("CircleShape2D_6g21m")

[connection signal="body_entered" from="Wardrobe/Area2D" to="Wardrobe" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Wardrobe/Area2D" to="Wardrobe" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Bed/Area2D" to="Bed" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Bed/Area2D" to="Bed" method="_on_area_2d_body_exited"]
